# AutoPAMPA

./: .gitignore  AutoPAMPA.py  Example_Out.xlsx  Makefile  README.md  pyproject.toml
autopampa/cli/: main.py
examples/: .~lock.Example_Job.xlsx#  Example_Results.xlsx
tests/: test_autopampa.py
tests/inputs/: test_job.xlsx
