[tool.poetry]
name = "autopampa"
version = "0.1.0"
description = "Automated analysis of mass spectrometry quantified assay data for complex mixtures"
authors = ["Chad Townsend <cetownse@ucsc.edu>"]
readme = "README.md"

[tool.poetry.scripts]
autopampa = "autopampa.cli.main:main"

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.12.2"
openpyxl = "^3.1.2"
statsmodels = "^0.13.5"
peakutils = "^1.3.4"
pymzml = "0.7.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
isort = "^5.10.1"
deepdiff = "^5.8.1"
doubles = "^1.5.3"
jupyter = "^1.0.0"
notebook = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
